2019-04-25      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2MetaError.def:  (MetaErrorT0)
          declare and export.
	* gm2/gm2-compiler/M2MetaError.mod:  (pop) copy
          the error type back to the caller.   (MetaErrorT0)
          new procedure.
	* gm2/gm2-compiler/M2Range.mod:  import (MetaErrorT0)
          and replace MetaErrorT1 with MetaErrorT0.  Ensure that
          all warnings are have the 'W' format specifier.
	  Ensure that all errors use 'E' for consistency.

2019-04-24      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2GenGCC.mod:  (DescribeError)
          corrected symbol numbers.
	* gm2/gm2-compiler/M2MetaError.def:  large number of
          additions new format specifiers 'S', 'T', 'u', 'k'.
	* gm2/gm2-compiler/M2MetaError.mod:  much debugging code
          added and bug fixes for color changes implemented.
          Also implemented the above format specifiers.
	* gm2/gm2-compiler/M2Quads.mod:  (FailParameter) and
	  (WarnParameter) use new format specifiers in M2MetaError.

2019-04-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2MetaError.def:  added MetaErrorString0.
	* gm2/gm2-compiler/M2MetaError.mod:  many bug fixes which
          implement coloring when concatenating strings.
	* gm2/gm2-compiler/M2Students.mod:
          (CheckForVariableThatLooksLikeKeyword) New procedure.
          (PerformVariableKeywordCheck) reimplemented to use
          MetaErrorString0.
	* gm2/gm2-compiler/SymbolTable.mod:  reimplemented
	  CheckForSymbols using the MetaError substructure.

2019-04-18      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Makefile.in:  removed purge of p2c components.
	* gm2/gm2-gcc/m2expr.c:  corrected comment formatting.
	* gm2/gm2-internals.texi:  added a line saying this is out of
          date.
	* gm2/gm2builtins.c:  removed.
	* gm2/gm2except.c:  removed.
	* gm2/p2c:  removed directory.
	* gm2/p2crc:  removed.