@@ -1,33 +1,82 @@
-/* Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010
- *               Free Software Foundation, Inc. */
-/* This file is part of GNU Modula-2.
+/* Selective.c provide access to timeval and select.
 
-This library is free software; you can redistribute it and/or
-modify it under the terms of the GNU Lesser General Public
-License as published by the Free Software Foundation; either
-version 2.1 of the License, or (at your option) any later version.
+Copyright (C) 2005-2019 Free Software Foundation, Inc.
+Contributed by Gaius Mulley <gaius@glam.ac.uk>.
 
-This library is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
+This file is part of GNU Modula-2.
+
+GNU Modula-2 is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 3, or (at your option)
+any later version.
+
+GNU Modula-2 is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-Lesser General Public License for more details.
+General Public License for more details.
 
-You should have received a copy of the GNU Lesser General Public
-License along with this library; if not, write to the Free Software
-Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA */
-/*
- *
- * Implementation module in C.
- *
- */
+You should have received a copy of the GNU General Public License
+along with GNU Modula-2; see the file COPYING.  If not,
+see <https://www.gnu.org/licenses/>.  */
 
-#include <p2c/p2c.h>
+#include "gm2-libs-host.h"
 
-/*
-   PROCEDURE Select (nooffds: CARDINAL;
-                     readfds, writefds, exceptfds: SetOfFd;
-                     timeout: Timeval) : INTEGER ;
-*/
+#if defined(HAVE_STDIO_H)
+#include <stdio.h>
+#endif
+
+#if defined(HAVE_STDDEF_H)
+/* to obtain a definition for NULL */
+# include <stddef.h>
+#endif
+
+#if defined(HAVE_STDIO_H)
+/* to obtain a definition for NULL */
+# include <stdio.h>
+#endif
+
+#if defined(HAVE_SYS_TIME_H)
+# include <sys/time.h>
+#endif
+
+#if defined(HAVE_TIME_H)
+/* to obtain a definition for NULL */
+# include <time.h>
+#endif
+
+#if defined(HAVE_STRING_H)
+/* to obtain a definition for NULL */
+# include <string.h>
+#endif
+
+#if defined(HAVE_WCHAR_H)
+/* to obtain a definition for NULL */
+# include <wchar.h>
+#endif
+
+#if defined(HAVE_STDLIB_H)
+/* to obtain a prototype for free and malloc */
+# include <stdlib.h>
+#endif
+
+#if defined(HAVE_SYS_TYPES_H)
+# include <sys/types.h>
+#endif
+
+#if defined(HAVE_UNISTD_H)
+# include <unistd.h>
+#endif
+
+#if !defined(NULL)
+# define NULL (void *)0
+#endif
+
+#if defined(HAVE_SELECT)
+# define FDSET_T fd_set
+#else
+# define FDSET_T void
+#endif
+
 
 #if defined(HAVE_SELECT)
 int Selective_Select (int nooffds,
@@ -49,14 +98,12 @@ int Selective_Select (int nooffds,
 }
 #endif
 
-/*
-   PROCEDURE InitTime (sec, usec) : Timeval ;
-*/
+/* InitTime initialises a timeval structure and returns a pointer to it.  */
 
 #if defined(HAVE_SELECT)
 struct timeval *Selective_InitTime (unsigned int sec, unsigned int usec)
 {
-  struct timeval *t=(struct timeval *)malloc(sizeof(struct timeval));
+  struct timeval *t = (struct timeval *) malloc (sizeof (struct timeval));
 
   t->tv_sec = (long int) sec;
   t->tv_usec = (long int) usec;
@@ -77,9 +124,7 @@ void Selective_SetTime (struct timeval *t,
   t->tv_usec = usec;
 }
 
-/*
-   PROCEDURE KillTime (t: Timeval) : Timeval ;
-*/
+/* KillTime frees the timeval structure and returns NULL.  */
 
 struct timeval *Selective_KillTime (struct timeval *t)
 {
@@ -87,9 +132,7 @@ struct timeval *Selective_KillTime (struct timeval *t)
   return NULL;
 }
 
-/*
-   PROCEDURE InitSet () : SetOfFd ;
-*/
+/* InitSet returns a pointer to a FD_SET.  */
 
 fd_set *Selective_InitSet (void)
 {
@@ -98,9 +141,7 @@ fd_set *Selective_InitSet (void)
   return s;
 }
 
-/*
-   PROCEDURE KillSet (s: SetOfFd) : SetOfFd ;
-*/
+/* KillSet frees the FD_SET and returns NULL.  */
 
 fd_set *Selective_KillSet (fd_set *s)
 {
@@ -108,18 +149,14 @@ fd_set *Selective_KillSet (fd_set *s)
   return NULL;
 }
 
-/*
-   PROCEDURE FdZero (s: SetOfFd) ;
-*/
+/* FdZero generate an empty set.  */
 
 void Selective_FdZero (fd_set *s)
 {
   FD_ZERO (s);
 }
 
-/*
-   PROCEDURE Fd_Set (fd: INTEGER; SetOfFd) ;
-*/
+/* FS_Set include an element, fd, into set, s.  */
 
 void Selective_FdSet (int fd, fd_set *s)
 {
@@ -127,9 +164,7 @@ void Selective_FdSet (int fd, fd_set *s)
 }
 
 
-/*
-   PROCEDURE FdClr (fd: INTEGER; SetOfFd) ;
-*/
+/* FdClr exclude an element, fd, from the set, s.  */
 
 void Selective_FdClr (int fd, fd_set *s)
 {
@@ -137,24 +172,20 @@ void Selective_FdClr (int fd, fd_set *s)
 }
 
 
-/*
-   PROCEDURE FdIsSet (fd: INTEGER; SetOfFd) : BOOLEAN ;
-*/
+/* FdIsSet return TRUE if, fd, is present in set, s.  */
 
 int Selective_FdIsSet (int fd, fd_set *s)
 {
   return FD_ISSET (fd, s);
 }
 
-/*
-   GetTimeOfDay - fills in a record, Timeval, filled in with the
-                  current system time in seconds and microseconds.
-                  It returns zero (see man 3p gettimeofday)
-*/
+/* GetTimeOfDay fills in a record, Timeval, filled in with the
+   current system time in seconds and microseconds.
+   It returns zero (see man 3p gettimeofday).  */
 
 int Selective_GetTimeOfDay (struct timeval *t)
 {
-    return gettimeofday (t, NULL);
+  return gettimeofday (t, NULL);
 }
 #else
 
@@ -207,22 +238,18 @@ int Selective_GetTimeOfDay (struct timeval *t)
 #endif
 
 
-/*
-   PROCEDURE MaxFdsPlusOne (a, b: File) : File ;
-*/
+/* MaxFdsPlusOne returns max (a + 1, b + 1).  */
 
 int Selective_MaxFdsPlusOne (int a, int b)
 {
-  if (a>b)
+  if (a > b)
     return a+1;
   else
     return b+1;
 }
 
 
-/*
-   PROCEDURE WriteCharRaw (fd: INTEGER; ch: CHAR) ;
-*/
+/* WriteCharRaw writes a single character to the file descriptor.  */
 
 void Selective_WriteCharRaw (int fd, char ch)
 {
@@ -230,9 +257,7 @@ void Selective_WriteCharRaw (int fd, char ch)
 }
 
 
-/*
-   PROCEDURE ReadCharRaw (fd: INTEGER) : CHAR ;
-*/
+/* ReadCharRaw read and return a single char from file descriptor, fd.  */
 
 char Selective_ReadCharRaw (int fd)
 {
@@ -241,6 +266,7 @@ char Selective_ReadCharRaw (int fd)
   read (fd, &ch, 1);
   return ch;
 }
+
 
 void _M2_Selective_init () {}
 void _M2_Selective_finish () {}
